fix : Ensure to broadcast profile save event when updating the profile - MEED-9427
Before this fix, when login with OIDC using custom claims, the listeners to add users in groups are not launched because broadcast=false
In addition, when filling the property, we do not use the correct Map type, so the save was not working.

Resolves meeds-io/meeds#3488